Aggiunta una ricetta corretta

--- a/ricettario.tex
+++ b/ricettario.tex
@@ -14,6 +14,7 @@
 %    ]{geometry}
 
 \usepackage{xcolor}
+\usepackage{booktabs}
 \usepackage{graphicx}
 \usepackage[clock]{ifsym}
 \usepackage{cookingsymbols}
@@ -183,43 +184,43 @@
 \tableofcontents
 
 \mainmatter
-\part{Introduzione}
-\input{ricette/temperature-di-cottura.tex}
+%\part{Introduzione}
+%\input{metodi/introduzione.tex}
 
-\newpage
-\part{Pane e lievitati}
-\input{./ricette/panini-hamburger-veloci.tex}
-\input{./ricette/crackers-al-sesamo.tex}
+%\newpage
+%\part{Pane e lievitati}
+%\input{./ricette/panini-hamburger-veloci.tex}
+%\input{./ricette/crackers-al-sesamo.tex}
 
 \newpage
 \part{Pesce}
 \input{./ricette/risotto-alla-gallinella.tex}
-\input{./ricette/pesce-spada-al-salmoriglio.tex}
-\input{./ricette/tataki-di-tonno-agli-agrumi.tex}
-\input{./ricette/mini-hamburger-di-ricciola.tex}
-
-\newpage
-\part{Carne}
-\input{./ricette/polpettone.tex}
-\input{./ricette/nuggets-di-pollo.tex}
-
-\newpage
-\part{BBQ}
-\input{./ricette/eliche-di-pollo-al-curry.tex}
-\input{./ricette/smoked-chicken-wings.tex}
-\input{./ricette/bombette-pugliesi.tex}
-\input{./ricette/involtini-alla-siciliana.tex}
-
-\newpage
-\part{Cottura a bassa temperatura (CBT)}
-
-\input{./ricette/stinco-di-maiale-cbt.tex}
-\input{./ricette/vitello-tonnato-cbt.tex}
-
-\newpage
-\part{Dolci}
-\input{./ricette/pancake.tex}
-\input{./ricette/biscotti-di-natale.tex}
+%\input{./ricette/pesce-spada-al-salmoriglio.tex}
+%\input{./ricette/tataki-di-tonno-agli-agrumi.tex}
+%\input{./ricette/mini-hamburger-di-ricciola.tex}
+%
+%\newpage
+%\part{Carne}
+%\input{./ricette/polpettone.tex}
+%\input{./ricette/nuggets-di-pollo.tex}
+%
+%\newpage
+%\part{BBQ}
+%\input{./ricette/eliche-di-pollo-al-curry.tex}
+%\input{./ricette/smoked-chicken-wings.tex}
+%\input{./ricette/bombette-pugliesi.tex}
+%\input{./ricette/involtini-alla-siciliana.tex}
+%
+%\newpage
+%\part{Cottura a bassa temperatura (CBT)}
+%
+%\input{./ricette/stinco-di-maiale-cbt.tex}
+%\input{./ricette/vitello-tonnato-cbt.tex}
+%
+%\newpage
+%\part{Dolci}
+%\input{./ricette/pancake.tex}
+%\input{./ricette/biscotti-di-natale.tex}
 
 
 
