Aggiunta ricetta: biscotti di Natale

--- a/ricettario.tex
+++ b/ricettario.tex
@@ -166,8 +166,8 @@
     \begingroup
     \parindent0pt
     \parskip0.25em
-        \leftskip2em
-    \everypar={\llap{\stepcounter{stepnum}\hbox to2em{\thestepnum.\hfill}}}
+%        \leftskip2em
+%    \everypar={\llap{\stepcounter{stepnum}\hbox to2em{\thestepnum.\hfill}}}
 }{%
     \par
     \endgroup}
@@ -217,10 +217,10 @@
 %\input{./ricette/stinco-di-maiale-cbt.tex}
 %\input{./ricette/vitello-tonnato-cbt.tex}
 %
-%\newpage
-%\part{Dolci}
+\newpage
+\part{Dolci}
 %\input{./ricette/pancake.tex}
-%\input{./ricette/biscotti-di-natale.tex}
+\input{./ricette/biscotti-di-natale.tex}
 
 
 
