--- a/ricette/biscotti-di-natale.tex
+++ b/ricette/biscotti-di-natale.tex
@@ -6,8 +6,8 @@
 	500g farina tipo 1
 	230g noci e nocciole
 	200g cioccolato
-	200g burro (puoi fare anche 180g)
-	200g zucchero
+	200g burro (puoi abbassare 180g)
+	200g zucchero (puoi abbassare a 180g)
 	3 uova
 	1 bustina di lievito
 	un pizzico di sale
@@ -16,16 +16,21 @@
 \end{ingreds}
 
 \begin{method}
-	Mescola le uova con lo zucchero poi aggiungi il burro a temperatura ambiente e continua a mescolare. Aggiungi qualche goccia di olio essenziale di limone o vaniglia. Aggiungi la farina, il lievito, le noci, le nocciole e, per ultimo, il cioccolato. Amalgama bene gli ingredienti senza impastare troppo per non sciogliere il cioccolato.
-	
-	Fai dei salsicciotti utilizzando la carta da forno e congela.
-	
-	Taglia biscotti e cuoci a \temp{185} gradi per 20/25 minuti.
+Puoi realizzare l'impasto per questi biscotti anche con la planetaria utilizzando lo strumento a forma di foglia.
 
-	Fai raffreddare.
+Mescola le uova con lo zucchero, poi aggiungi il burro a temperatura ambiente e continua a mescolare. Aggiungi qualche goccia di olio essenziale di limone o vaniglia. Aggiungi la farina, il lievito.
 
-\end {method}
-	\begin{note}
+Quando l'impasto risulta omogeneo aggiungi le noci, le nocciole e, per ultimo, il cioccolato: distribuisci questi ultimi ingredienti senza impastare troppo per non sciogliere il cioccolato.
+	
+Prepara dei salsicciotti di circa 4cm di diametro aiutandoti con un pezzo di carta da forno che utilizzerai per avvolgere il salsicciotto stesso e riporlo successivamente nel congelatore. I biscotti dovranno rimanere nel congelatore per un minimo di 30 minuti, oppure puoi congelarli completamente e cuocerli in un secondo tempo.
+	
+Taglia biscotti e cuoci a \temp{185} per 20/25 minuti.
+
+Fai raffreddare.
+
+\end{method}
+
+\begin{note}
 		Puoi sostituire lo zucchero con 20g di stevia ma dovrai aggiungere circa mezzo bicchiere di latte e cuocere per circa 10 minuti in più.
 		
 		Con 500g di farina puoi produrre 4 salsicciotti di biscotti.
