Cambiata organizzazione delle cartelle con le ricette

--- a/ricettario.tex
+++ b/ricettario.tex
@@ -193,8 +193,8 @@
 %\input{./ricette/crackers-al-sesamo.tex}
 
 \newpage
-\part{Pesce}
-\input{./ricette/risotto-alla-gallinella.tex}
+\part{Primi}
+\input{./Ricette/Primi/risotto-alla-gallinella}
 %\input{./ricette/pesce-spada-al-salmoriglio.tex}
 %\input{./ricette/tataki-di-tonno-agli-agrumi.tex}
 %\input{./ricette/mini-hamburger-di-ricciola.tex}
@@ -220,7 +220,7 @@
 \newpage
 \part{Dolci}
 %\input{./ricette/pancake.tex}
-\input{./ricette/biscotti-di-natale.tex}
+\input{./Ricette/Dolci/biscotti-di-natale}
 
 
 
