Aggiunta ricetta del pesce spada al salmoriglio

--- a/Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio.tex
+++ b/Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio.tex
@@ -21,9 +21,9 @@
 \begin{method}
 Taglia il pesce spada a tocchetti di 3-4 centimetri, ungilo accuratamente e riponilo in frigorifero.
 
-Inizia a preparare il salmoriglio mettendo in una bull, adatta al bagnomaria, la scorza grattigiata e il succo di un limone, un pizzico di sale, un po' di pepe e un goccio di acqua calda. Aggiungi l'aglio tritato, l'origano essiccato e le due foglie di alloro spezzettate. Mescola con una frusta per fare sciogliere bene il sale. Aggiungi l'olio extravergine di oliva e cuoci a bagnomaria per circa 15 minuti mescolando di tanto in tanto con la frusta. A cottura ultimata, togli la bull dal fuoco e filtra la salsa con un colino.
+Inizia a preparare il salmoriglio aggiungendo ad una bull adatta al bagnomaria i seguenti ingredienti: la scorza di limone grattigiata, il succo di un limone, un pizzico di sale, un po' di pepe e un mestolo di acqua calda. Aggiungi l'aglio tritato, l'origano essiccato e le due foglie di alloro spezzettate. Mescola con una frusta per fare sciogliere bene il sale. Aggiungi l'olio extravergine di oliva e cuoci a bagnomaria per circa 15 minuti mescolando di tanto in tanto con la frusta. A cottura ultimata, togli la bull dal fuoco e filtra la salsa con un colino.
 
-Cuoci in una padella antiaderente a fuoco alto il pesce spada, lasciandolo leggermente crudo all'interno. Occorreranno pochi minuti per lato. Lascia riposare il pesce cotto per alcuni minuti coprendolo con carta di alluminio. Taglia i pezzi di pesce in due e disponilo in un piatto poi bagna il pesce con il salmoriglio.
+Cuoci in una padella antiaderente a fuoco alto il pesce spada, lasciandolo leggermente crudo all'interno. Occorreranno pochi minuti per lato. Lascia riposare il pesce cotto per alcuni minuti coprendolo con carta di alluminio in modo che il calore si diffonda all'interno e si ridistribuiscano i succhi. Taglia i pezzi di pesce in due e disponilo in un piatto poi bagna il pesce con il salmoriglio.
 
 \end {method}
 
