--- a/ricettario.tex
+++ b/ricettario.tex
@@ -195,12 +195,14 @@
 \newpage
 \part{Primi}
 \input{./Ricette/Primi/risotto-alla-gallinella}
-%\input{./ricette/pesce-spada-al-salmoriglio.tex}
+
+\part{Secondi di pesce}
+\input{./Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio}
 %\input{./ricette/tataki-di-tonno-agli-agrumi.tex}
 %\input{./ricette/mini-hamburger-di-ricciola.tex}
 %
 %\newpage
-%\part{Carne}
+%\part{Secondi di carne}
 %\input{./ricette/polpettone.tex}
 %\input{./ricette/nuggets-di-pollo.tex}
 %
