Corretto errore di compilazione

--- a/Ricette/Antipasti/mini-hamburger-di-ricciola.tex
+++ b/Ricette/Antipasti/mini-hamburger-di-ricciola.tex
@@ -25,4 +25,6 @@ Taglia il porro a juilenne sottili, cospargilo di farina e friggilo in olio di s
 
 Taglia il pane con il coppapasta che hai usato per preparare gli hamburger e fallo tostare in forno. Cuoci gli hamburger in una padella antiaderente senza esagerare con la cottura. Componi i panini con la panna acida, l'hamburger di ricciola al quale avrai tolto le foglie di alloro e il porro fritto. Puoi fermare i panini con uno stuzzicadente.
 \end {method}
-
+	\begin{note}
+		Puoi sistituire la ricciola con branzino o orata.
+	\end{note}
