Aggiunta ricetta dei nuggets di pollo

--- a/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
+++ b/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
@@ -1,4 +1,4 @@
-\recipe[Piccole pepite di pollo da accompagnare a gustosissime salse. Sono praticamente una droga.]{Nuggets di pollo}
+\recipe[]{Nuggets di pollo}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{4 minuti}
@@ -21,18 +21,20 @@
 \end{ingreds}
 
 \begin{method}
-	Passa al mixer il pollo con la cipolla, l'aglio schiacciato e il pane. Aggiungi il sale, la senape e la salsa di soia.
+Passa al mixer il pollo con la cipolla, l'aglio schiacciato e il pane. Aggiungi il sale, la senape e la salsa di soia.
 
-	Prepara le polpette e mettile in un vassoio. Non esagerare con le dimensioni. Dovresti riuscire a preparare circa 30 polpette.
+Prepara le polpette schiacciandole leggermente per dare la classica forma di nuggets e mettile in un vassoio. Non esagerare con le dimensioni. Dovresti riuscire a preparare circa 30 polpette. Per evitare che la carne si attacchi alle mani puoi usare dei guanti monouso oppure puoi inumidirti le mani.
 
-	Mescola la farina con il latte e l'uovo usando una frusta. Regola di sale. Tuffa i nuggets nella pastella, poi nel pangrattato.
+Prepara la pastella mescolando con una frusta la farina con il latte e l'uovo. Aggiungi un pizzico di sale. Tuffa i nuggets nella pastella, poi nel pangrattato.
 
-	Friggi a \temp{175} per 3 minuti circa.
+Friggi a \temp{175} per 3 minuti.
 
 \end {method}
 
 	\begin{note}
-		Puoi congelare i nuggets dopo averli impanati e cuocere direttamente da congelati a \temp{175} per 4/5 minuti.
+		Puoi congelare i nuggets dopo averli impanati e cuocerli da congelati portando il tempo di cottura a 5 minuti.
+
+		Se hai molti nuggets da cuocere, puoi tenere un contenitore con i nuggets già fritti in forno statico alla temperatura di \temp{60} avendo cura di inserire un cucchiaio di legno nello sportello del forno per garantire la fuoriuscita di vapore oppure aprendo lo sportello abbastanza spesso. In questo modo potrai servire tutti i nuggets ancora caldi contemporaneamente.
 	\end{note}
 
 
