--- a/main.tex
+++ b/main.tex
@@ -194,7 +194,7 @@
 
 \newpage
 \part{Antipasti}
-\input{./Ricette/Antipasti/mini-hamburger-di-ricciola.tex}
+\input{./Ricette/Antipasti/mini-hamburger-di-ricciola}
 
 \newpage
 \part{Primi}
@@ -204,10 +204,10 @@
 \input{./Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio}
 %\input{./ricette/tataki-di-tonno-agli-agrumi.tex}
 %
-%\newpage
-%\part{Secondi di carne}
+\newpage
+\part{Secondi di carne}
 %\input{./ricette/polpettone.tex}
-%\input{./ricette/nuggets-di-pollo.tex}
+\input{./Ricette/Secondi-di-carne/nuggets-di-pollo}
 %
 %\newpage
 %\part{BBQ}
