Aggiunta rietta del polpettone di manzo

--- a/Ricette/Secondi-di-carne/polpettone.tex
+++ b/Ricette/Secondi-di-carne/polpettone.tex
@@ -1,4 +1,4 @@
-\recipe[Un grande classico.]{Polpettone}
+\recipe[]{Polpettone di manzo}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{45 minuti}
@@ -13,16 +13,17 @@
 	erbe aromatiche
 	prosciutto cotto
 	provola o scamorza
+	pangrattato
 \end{ingreds}
 
 \begin{method}
-	Mescola il macinato di manzo con la mollica ammollata e strizzata, le uova, il formaggio grattugiato, le erbe aromatiche. Regola di sale e pepe.
+Mescola il macinato di manzo con la mollica ammollata nel latte e strizzata, le uova, il formaggio grattugiato e le erbe aromatiche. Regola di sale e pepe.
 
-	Stendi il macinato su un foglio di carta da forno in modo da formare un rettangolo alto circa 1,5 centimetri. Stendi sopra il prosciutto cotto e la scamorza, poi arrotola aiutandoti con la carta da forno. Ricorda di sigillare bene anche le estremità.
+Stendi il macinato su un foglio di carta da forno in modo da formare un rettangolo alto circa 1,5 centimetri. Stendi sopra il prosciutto cotto e la scamorza, poi arrotola aiutandoti con la carta da forno. Ricorda di sigillare bene anche le estremità.
 
-	Ungi la superficie del polpettone con olio extravergine d'oliva e spolvera leggermente con del pane grattato.
+Ungi la superficie del polpettone con olio extravergine d'oliva e spolvera leggermente con del pane grattato.
 
-	Cuoci in forno statico a \temp{200} fino al raggiungimento dei \temp{75} al cuore; impiegherà circa 45 minuti.
+Cuoci in forno statico a \temp{200} fino al raggiungimento dei \temp{75} al cuore; impiegherà circa 45 minuti.
 \end {method}
 
 
