--- a/main.tex
+++ b/main.tex
@@ -206,8 +206,8 @@
 %
 \newpage
 \part{Secondi di carne}
-%\input{./ricette/polpettone.tex}
 \input{./Ricette/Secondi-di-carne/nuggets-di-pollo}
+\input{./Ricette/Secondi-di-carne/polpettone.tex}
 %
 %\newpage
 %\part{BBQ}
