--- a/Ricette/Secondi-di-pesce/tataki-di-tonno-agli-agrumi.tex
+++ b/Ricette/Secondi-di-pesce/tataki-di-tonno-agli-agrumi.tex
@@ -1,4 +1,4 @@
-\recipe[Il tataki è una cottura particolare che prevede di scottare gli alimenti a temperatura altissima per poi immergerli in acqua e ghiaccio.]{Tataki di tonno fagioli e cipolla}
+\recipe[Il tataki è una cottura particolare che prevede di scottare gli alimenti a temperatura altissima per poi immergerli in acqua e ghiaccio per bloccare la cottura.]{Tataki di tonno fagioli e cipolla}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{5 minuti}
@@ -21,13 +21,13 @@
 
 \begin{method}
 
-	Taglia il tonno a parallelepipedi e mettiola marinare per qualche ora in frigorifero con le scorze degli agrumi e l'olio extravergine di oliva.
+Taglia il tonno a parallelepipedi con il lato piccolo di 3x3 centimetri. Metti i filetti a marinare per qualche ora in frigorifero con le scorze degli agrumi e l'olio extravergine di oliva.
 
-	Scalda una padella a temperatura altissima e cuoci il tonno per pochi secondi per ogni lato. Poi immergi il tonno in acqua e ghiaccio per fermare la temperatura. Asciuga il tonno e mettilo a marinare con rosmarino e aglio coprendolo compeltamente di olio extravergine di oliva.
+Scalda una padella antiaderente o di ferro a temperatura altissima e cuoci il tonno per pochi secondi per ogni lato. Successivamente immergi il tonno in acqua e ghiaccio per fermare la cottura. Asciuga il tonno e mettilo a marinare con rosmarino e aglio coprendolo compeltamente di olio extravergine di oliva.
 
-	Frulla i fagioli con brodo vegetale, succo di limone, sale e olio extravergine di oliva.
+Prepara la salsa frullando i fagioli con brodo vegetale, succo di limone, sale e olio extravergine di oliva. Setaccia la salsa così ottenuta con un colino.
 
-	Friggi la cipolla o disidratala in forno.
+Friggi la cipolla leggermente infarinata.
 
-	Componi il piatto con la salsa di fagioli sul fondo, dei cubetti di tonno, la cipolla fritta, qualche granello di sale e un giro di olio evo.
+Componi il piatto con la salsa di fagioli sul fondo, dei cubetti di tonno, la cipolla fritta, qualche granello di sale e un giro di olio evo.
 \end {method}
