Ricetta: Eliche di pollo al curry

--- a/Ricette/Secondi-di-carne/eliche-di-pollo-al-curry.tex
+++ b/Ricette/Secondi-di-carne/eliche-di-pollo-al-curry.tex
@@ -1,4 +1,4 @@
-\recipe[Le eliche di pollo al curry sono degli spiedini con un sapore etnico, adatti sia come antipasto che come aperitivo.]{Eliche di pollo al curry}
+\recipe[]{Eliche di pollo al curry}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{6 minuti}
@@ -11,9 +11,9 @@
 \end{ingreds}
 
 \begin{method}
-	Taglia il petto di pollo a striscie e mettile a marinare con olio extravergine d'oliva, un pizzico di sale e abbondante curry.
+Taglia il petto di pollo a striscie di 1 centimetro di lato e mettilo a marinare con olio extravergine d'oliva, un pizzico di sale e abbondante curry.
 
-	Prepara degli spiedini disponendo a elica il pollo, poi cospargi leggermente con il pan grattato.
+Prepara degli spiedini disponendo a elica il pollo, poi cospargi leggermente con il pan grattato.
 
-	Porta il barbecue alla massima temperatura e cuoci gli spiedini 3 minuti per lato.
+Porta il barbecue alla massima temperatura e cuoci gli spiedini 3 minuti per lato.
 \end {method}
