--- a/main.tex
+++ b/main.tex
@@ -208,13 +208,13 @@
 \part{Secondi di carne}
 \input{./Ricette/Secondi-di-carne/nuggets-di-pollo}
 \input{./Ricette/Secondi-di-carne/polpettone}
-%
-%\newpage
-%\part{BBQ}
-%\input{./ricette/eliche-di-pollo-al-curry.tex}
-%\input{./ricette/smoked-chicken-wings.tex}
-%\input{./ricette/bombette-pugliesi.tex}
-%\input{./ricette/involtini-alla-siciliana.tex}
+
+\newpage
+\part{BBQ}
+\input{./Ricette/Secondi-di-carne/eliche-di-pollo-al-curry.tex}
+%\input{./Ricette/Secondi-di-carne/smoked-chicken-wings.tex}
+%\input{./Ricette/Secondi-di-carne/bombette-pugliesi.tex}
+%\input{./Ricette/Secondi-di-carne/involtini-alla-siciliana.tex}
 %
 %\newpage
 %\part{Cottura a bassa temperatura (CBT)}
