Ricette: bombette pugliesi, involtini alla siciliana, chicken wings

--- a/Ricette/Secondi-di-carne/bombette-pugliesi.tex
+++ b/Ricette/Secondi-di-carne/bombette-pugliesi.tex
@@ -1,4 +1,4 @@
-\recipe[Un secondo di carne saporito.]{Bombette pugliesi}
+\recipe[]{Bombette pugliesi}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{40 minuti}
@@ -16,9 +16,9 @@
 \end{ingreds}
 
 \begin{method}
-	In un mixer prepara un trito di prezzemolo, aglio, sale e pepe.
+Prepara un trito di prezzemolo, aglio, sale e pepe.
 
-	Prepara le bombette stendendo, sulla fetta di coppa, una fetta di pancetta, una fetta di caciocavallo e il prezzemolo all'aglio. Arrotola l'involtino e infilzalo in uno spiedo.
+Prepara le bombette stendendo, sulla fetta di coppa, una fetta di pancetta, una fetta di caciocavallo e il prezzemolo all'aglio. Arrotola l'involtino e infilzalo in uno spiedo.
 
-	Stabilizza il barbecue alla temperatra di \temp{140} e cuoci gli spidini per circa 40 minuti.
+Stabilizza il barbecue alla temperatra di \temp{140} e cuoci gli spidini per circa 40 minuti.
 \end {method}
