--- a/Ricette/Secondi-di-carne/involtini-alla-siciliana.tex
+++ b/Ricette/Secondi-di-carne/involtini-alla-siciliana.tex
@@ -1,4 +1,4 @@
-\recipe[Profumatissimi spiedini da fare al barbecue con una ricetta presa da bbq4all]{Involtini di carne alla siciliana}
+\recipe[]{Involtini di carne alla siciliana}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{15 minuti}
@@ -8,18 +8,20 @@
 	scamorza
 	prosciutto cotto 
 	uvetta
-	pan grattato
+	pane raffermo
+	pangrattato
+	un bicchiere di latte
 	qualche foglia di alloro
 \end{ingreds}
 
 \begin{method}
-	Taglia il carpaccio in modo da formare delle fette triangolari. In genere per ogni fetta di carpaccio è possibile ricavare 2 triangoli.
+Taglia il carpaccio in modo da formare delle fette triangolari. In genere per ogni fetta di carpaccio è possibile ricavare 2 triangoli.
 
-	Prepara la farcia per gli involtini mescolando l'uvetta ammollata e leggermente tritata con il prosciutto cotto tagliato a cubettini, la scamorza e un po' di pan grattato.
+Prepara la farcia per gli involtini mescolando l'uvetta ammollata e leggermente tritata con il prosciutto cotto tagliato a cubettini, la scamorza e un po' di pane ammollato nel latte e strizzato.
 
-	Prepara gli involtini con la farcia e mettili in uno spiedo alternati da un petalo di cipolla e una foglia di alloro.
+Prepara gli involtini con la farcia; mettili in uno spiedo alternati da un petalo di cipolla e una foglia di alloro.
 
-	Ungi leggermente gli  spiedini e dai una spolverata con il pan grattato, poi cuoci al barbecue fino allo scioglimento completo della farcia.
+Ungi leggermente gli  spiedini e dai una spolverata con il pangrattato, poi cuoci al barbecue fino allo scioglimento completo della farcia.
 
 \end {method}
 
