--- a/main.tex
+++ b/main.tex
@@ -211,10 +211,10 @@
 
 \newpage
 \part{BBQ}
+\input{./Ricette/Secondi-di-carne/bombette-pugliesi.tex}
 \input{./Ricette/Secondi-di-carne/eliche-di-pollo-al-curry.tex}
-%\input{./Ricette/Secondi-di-carne/smoked-chicken-wings.tex}
-%\input{./Ricette/Secondi-di-carne/bombette-pugliesi.tex}
-%\input{./Ricette/Secondi-di-carne/involtini-alla-siciliana.tex}
+\input{./Ricette/Secondi-di-carne/involtini-alla-siciliana.tex}
+\input{./Ricette/Secondi-di-carne/smoked-chicken-wings.tex}
 %
 %\newpage
 %\part{Cottura a bassa temperatura (CBT)}
