--- a/Ricette/Secondi-di-carne/smoked-chicken-wings.tex
+++ b/Ricette/Secondi-di-carne/smoked-chicken-wings.tex
@@ -1,4 +1,4 @@
-\recipe[Sono praticamente una droga.]{Smoked chicken wings}
+\recipe[]{Smoked chicken wings}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{40 minuti}
@@ -18,11 +18,11 @@
 \end{ingreds}
 
 \begin{method}
-	Togli la punta delle ali di pollo e dividile a metà. In un tegamino sciogli il burro, aggiungi il limone, e gli altri ingredienti per la marinatura. Attendi che l'acool contenuto nel burbon sia evaporato completamente, poi fai raffreddare.
+Togli la punta delle ali di pollo e dividile a metà. In un tegamino sciogli il burro, aggiungi il limone, e gli altri ingredienti per la marinatura. Attendi che l'acool contenuto nel burbon sia evaporato completamente, poi fai raffreddare.
 
-	Metti a marinare il pollo per alcune ore in frigorifero con la salsa appena preparata.
+Metti a marinare il pollo per alcune ore in frigorifero con la marinatura appena preparata.
 
-	Stabilizza il barbecue a \temp{140} e cuoci le alette 20 minuti per lato.
+Stabilizza il barbecue a \temp{140} e cuoci le alette 20 minuti per lato.
 
-	Alza la temperatura del barbecue, spennella le alette con salsa barbecue e cuoci per 5 minuti.
+Alza la temperatura del barbecue, spennella le alette con salsa barbecue e cuoci per 5 minuti.
 \end {method}
