--- a/main.tex
+++ b/main.tex
@@ -219,8 +219,8 @@
 %\newpage
 %\part{Cottura a bassa temperatura (CBT)}
 %
-%\input{./ricette/stinco-di-maiale-cbt.tex}
-%\input{./ricette/vitello-tonnato-cbt.tex}
+\input{./Ricette/CBT/stinco-di-maiale-cbt.tex}
+\input{./Ricette/CBT/vitello-tonnato-cbt.tex}
 %
 \newpage
 \part{Dolci}
