Ricette pancake e salsa bbq

--- a/Ricette/Dolci/pancake.tex
+++ b/Ricette/Dolci/pancake.tex
@@ -1,24 +1,30 @@
-\recipe[I pancake sono la ricetta tipica della colazione o merenda americana.]{Pancake}
+\recipe[]{Pancake}
 \serves{4}
 \preptime{20 minuti}
 \cooktime[Cottura]{10 minuti}
 \begin{ingreds}
 	200g farina
-	187g latte tiepido
+	190g latte tiepido
 	30g aceto
 	25g zucchero
 	10g lievito per dolci
 	5g bicarbonato
 	2 uova
 	un pizzico di sale
+\columnbreak
+	\ingredients[Farcire i pancake]
+	Frutta fresca
+	Nocciolata
+	Sciroppo d'acero
+	Zucchero a velo
 \end{ingreds}
 
 \begin{method}
-	Mescola il latte con il desto degli ingredienti liquidi, poi settaccia la farina e il lievito nella bull con i liquidi. Mescola energicamente con la frusta.
+Mescola il latte con il resto degli ingredienti liquidi, poi settaccia la farina e il lievito nella bull con i liquidi. Mescola energicamente con la frusta.
 
-	Cuoci in padella antiaderente senza aggiungere grassi a fuoco medio.
+Cuoci in padella antiaderente o di ferro senza aggiungere grassi a fuoco medio.
 
-	Fai asciugare i pancake su una griglia. Puoi farcire i pancake con frutta fresca e zucchero a velo, oppure nutella o marmellata, oppure il grande classico dello sciroppo d'acero.
+Fai asciugare i pancake su una griglia. Puoi farcire i pancake con frutta fresca e zucchero a velo, oppure nutella o marmellata, oppure con sciroppo d'acero.
 \end {method}
 
 
