--- a/Ricette/Secondi-di-carne/smoked-chicken-wings.tex
+++ b/Ricette/Secondi-di-carne/smoked-chicken-wings.tex
@@ -1,4 +1,4 @@
-\recipe[]{Smoked chicken wings}
+\recipe[]{Chicken wings}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{40 minuti}
@@ -15,6 +15,7 @@
 	1 cucchiaio di zucchero
 	1 bicchiere di burbon
 	1 cucchiaino di concentrato di pomodoro
+	Salsa BBQ (Vedi ricetta \ref{salsa-bbq})
 \end{ingreds}
 
 \begin{method}
