--- a/main.tex
+++ b/main.tex
@@ -197,6 +197,11 @@
 \input{./Ricette/Antipasti/mini-hamburger-di-ricciola}
 
 \newpage
+\part{Sale e preparazioni di base}
+\input{./Ricette/Salse/salsa-bbq}
+
+
+\newpage
 \part{Primi}
 \input{./Ricette/Primi/risotto-alla-gallinella}
 
@@ -224,7 +229,7 @@
 %
 \newpage
 \part{Dolci}
-%\input{./ricette/pancake.tex}
+\input{./Ricette/Dolci/pancake.tex}
 \input{./Ricette/Dolci/biscotti-di-natale}
 
 
