--- a/main.tex
+++ b/main.tex
@@ -230,7 +230,8 @@
 %
 \newpage
 \part{Dolci}
-\input{./Ricette/Dolci/pancake.tex}
+\input{./Ricette/Dolci/barrette-energetiche}
+\input{./Ricette/Dolci/pancake}
 \input{./Ricette/Dolci/biscotti-di-natale}
 
 
