--- a/main.tex
+++ b/main.tex
@@ -221,10 +221,9 @@
 \input{./Ricette/Secondi-di-carne/eliche-di-pollo-al-curry.tex}
 \input{./Ricette/Secondi-di-carne/involtini-alla-siciliana.tex}
 \input{./Ricette/Secondi-di-carne/smoked-chicken-wings.tex}
-%
-%\newpage
-%\part{Cottura a bassa temperatura (CBT)}
-%
+
+\newpage
+\part{Cottura a bassa temperatura (CBT)}
 \input{./Ricette/CBT/stinco-di-maiale-cbt.tex}
 \input{./Ricette/CBT/vitello-tonnato-cbt.tex}
 %
