Aggiuto irferimento incrociato a rub

--- a/Ricette/CBT/stinco-di-maiale-cbt.tex
+++ b/Ricette/CBT/stinco-di-maiale-cbt.tex
@@ -7,7 +7,7 @@
 	\ingredients[Per la cottura dello stinco:]
 	2 stinchi di maiale
 	2 cucchiai di senape
-	2 cucchiai di rub
+	2 cucchiai di rub (vedi ricetta \ref{rub:magic-dust})
 	salsa bbq
 	\ingredients[Per la salsa dello stinco:]
 	1/2 costa di sedano
