--- a/Ricette/Salse/my-magic-dust.tex
+++ b/Ricette/Salse/my-magic-dust.tex
@@ -1,4 +1,4 @@
-\recipe[]{Rub: My Magic Dust}
+\recipe[]{Rub: My Magic Dust}\label{rub:magic-dust}
 \serves{-}
 \preptime{5 minuti}
 \cooktime[Cottura]{-}
