--- a/Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex
+++ b/Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex
@@ -1,4 +1,4 @@
-\recipe[]{Panini da hamburgher veloci}
+\recipe[]{Panini da hamburgher veloci}\label{panini-hamburger}
 \serves{8}
 \preptime{2 ore e 30}
 \cooktime[Cottura]{30 minuti}
