--- a/main.tex
+++ b/main.tex
@@ -187,10 +187,10 @@
 %\part{Introduzione}
 %\input{metodi/introduzione.tex}
 
-%\newpage
-%\part{Pane e lievitati}
-%\input{./ricette/panini-hamburger-veloci.tex}
-%\input{./ricette/crackers-al-sesamo.tex}
+\newpage
+\part{Pane e lievitati}
+\input{./Ricette/Pane-e-lievitati/crackers-al-sesamo.tex}
+\input{./Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex}
 
 \newpage
 \part{Antipasti}
