--- a/Ricette/Pane-e-lievitati/crackers-al-sesamo.tex
+++ b/Ricette/Pane-e-lievitati/crackers-al-sesamo.tex
@@ -1,4 +1,4 @@
-\recipe[Stupite i vostri commensali con questi deliziosi crackers fatti in casa.]{Crackers al sesamo}
+\recipe[]{Crackers al sesamo}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{30 minuti}
