--- a/main.tex
+++ b/main.tex
@@ -206,6 +206,7 @@
 \part{Primi}
 \input{./Ricette/Primi/risotto-alla-gallinella}
 
+\newpage
 \part{Secondi di pesce}
 \input{./Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio}
 \input{./Ricette/Secondi-di-pesce/tataki-di-tonno-agli-agrumi}
