Aggiunta nota alla tabella della ricetta magic dust

--- a/Ricette/Salse/my-magic-dust.tex
+++ b/Ricette/Salse/my-magic-dust.tex
@@ -11,7 +11,7 @@
 \end{ingreds}
 
 \begin{method}
-Miscela tutti gli ingredienti e posiziona in un barattolo. Ogni tanto ricorda di scuotere il barattolo.
+Miscela tutti gli ingredienti e posiziona in un barattolo. Ogni tanto ricorda di scuotere il barattolo. Nella tabella seguente puoi trovare gli ingredienti porzionati in base alla quantità che desideri produrre.
 \begin{table}[h]
 \begin{tabular}{lcc}
 \toprule
