Modificata la visualizzazione del tempo di cottura e le altre info che prima erano visualizzate nell'header e nel footer

--- a/Ricette/Salse/my-magic-dust.tex
+++ b/Ricette/Salse/my-magic-dust.tex
@@ -1,7 +1,7 @@
 \recipe[]{Rub: My Magic Dust}\label{rub:magic-dust}
 \serves{-}
 \preptime{5 minuti}
-\cooktime[Cottura]{-}
+\cooktime{-}
 \vegetarian
 \begin{ingreds}
 	Vedi tabella nella preparazione
