--- a/Ricette/Antipasti/mini-hamburger-di-ricciola.tex
+++ b/Ricette/Antipasti/mini-hamburger-di-ricciola.tex
@@ -1,7 +1,7 @@
 \recipe[I mini hamburger di ricciola sono un piatto delicato e leggero adatto per un aperitivo in compagnia.]{Mini hamburger di ricciola}
 \serves{4}
 \preptime{1 ora}
-\cooktime[Cottura]{5 minuti}
+\cooktime{5 minuti}
 \begin{ingreds}
 	200g di ricciola
 	4 foglie di alloro
