--- a/Ricette/Salse/salsa-bbq.tex
+++ b/Ricette/Salse/salsa-bbq.tex
@@ -1,7 +1,7 @@
 \recipe[]{Salsa BBQ all'abicocca}\label{salsa-bbq}
 \serves{-}
 \preptime{1 ora}
-\cooktime[Cottura]{10 minuti}
+\cooktime{10 minuti}
 \vegetarian
 \begin{ingreds}
 	200g di doppio concentrato di pomodoro
