Piccole modifiche all'intestazione

--- a/Ricette/CBT/stinco-di-maiale-cbt.tex
+++ b/Ricette/CBT/stinco-di-maiale-cbt.tex
@@ -1,7 +1,7 @@
 \recipe[Una ricetta che prevede più passaggi in diversi giorni ma che garantisce grandi soddisfazioni. Indispensabili la macchina per sotto vuoto e un roner per cottura in bagno termostatico.]{Stinco di maiale (CBT)}
 \serves{4}
 \preptime{4 giorni}
-\cooktime[Cottura]{24 ore}
+\cooktime{24 ore}
 \cbt
 \begin{ingreds}
 	\ingredients[Per la cottura dello stinco:]
