--- a/Ricette/CBT/vitello-tonnato-cbt.tex
+++ b/Ricette/CBT/vitello-tonnato-cbt.tex
@@ -1,7 +1,7 @@
 \recipe[]{Vitello tonnato (CBT)}
 \serves{4}
 \preptime{1 ora}
-\cooktime[Cottura]{30 minuti}
+\cooktime{30 minuti}
 \cbt
 \begin{ingreds}
 	500g di girello di vitello
