--- a/Ricette/Dolci/barrette-energetiche.tex
+++ b/Ricette/Dolci/barrette-energetiche.tex
@@ -1,7 +1,7 @@
 \recipe[]{Barrette energetiche}
 \serves{16 barrette}
 \preptime{1 ora}
-\cooktime[Cottura]{40 minuti}
+\cooktime{40 minuti}
 \vegetarian
 \freeze
 \begin{ingreds}
