--- a/Ricette/Dolci/biscotti-di-natale.tex
+++ b/Ricette/Dolci/biscotti-di-natale.tex
@@ -1,7 +1,7 @@
 \recipe[Questa è una ricetta di famiglia che realizziamo una volta all'anno nel periodo delle feste Natalizie.]{Biscotti di Natale}
 \serves{4}
 \preptime{2 ora}
-\cooktime[Cottura]{20 minuti}
+\cooktime{25 minuti}
 \begin{ingreds}
 	500g farina tipo 1
 	230g noci e nocciole
