--- a/Ricette/Dolci/pancake.tex
+++ b/Ricette/Dolci/pancake.tex
@@ -1,7 +1,7 @@
 \recipe[]{Pancake}
 \serves{4}
 \preptime{20 minuti}
-\cooktime[Cottura]{10 minuti}
+\cooktime{10 minuti}
 \begin{ingreds}
 	200g farina
 	190g latte tiepido
