Informazioni aggiuntive in linea

--- a/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
+++ b/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
@@ -1,7 +1,7 @@
 \recipe[]{Nuggets di pollo}
 \serves{4}
 \preptime{1 ora}
-\cooktime[Cottura]{4 minuti}
+\cooktime{4 minuti}
 \begin{ingreds}
 	500g di petto di pollo
 	45g di cipolla bianca
