--- a/Ricette/Secondi-di-carne/polpettone.tex
+++ b/Ricette/Secondi-di-carne/polpettone.tex
@@ -1,7 +1,7 @@
 \recipe[]{Polpettone di manzo}
 \serves{4}
 \preptime{1 ora}
-\cooktime[Cottura]{45 minuti}
+\cooktime{45 minuti}
 \begin{ingreds}
 	600g di macinato di manzo + una salsiccia di maiale
 	pecorino grattugiato
