--- a/main.tex
+++ b/main.tex
@@ -71,15 +71,15 @@
     \lhead{\large\color{frzcolor}\textbf{F}}}
 %% Optional arguments for alternate names for these:
 \newcommand{\serves}[2][\Fork\Dish\Knife]{%
-	#1 #2 porzioni\newline
+	#1 #2 porzioni
     %\chead{#1 #2}
     }
 \newcommand{\preptime}[2][\Gloves]{%
-	#1 #2 \newline
+	#1 #2 
 	%\lfoot{#1 #2}%
 }
-\newcommand{\cooktime}[2][\Interval]{%
-	#1 #2 \newline
+\newcommand{\cooktime}[2][\Oven]{%
+	#1 #2 
 	% \rfoot{#1: #2}%
 }
 \newcommand{\temp}[1]{%
