--- a/main.tex
+++ b/main.tex
@@ -193,48 +193,48 @@
 %\input{metodi/introduzione.tex}
 
 \newpage
-\part{Pane e lievitati}
+\chapter{Pane e lievitati}
 \input{./Ricette/Pane-e-lievitati/crackers-al-sesamo.tex}
 \input{./Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex}
 
 \newpage
-\part{Antipasti}
+\chapter{Antipasti}
 \input{./Ricette/Antipasti/mini-hamburger-di-ricciola}
 
 \newpage
-\part{Sale e preparazioni di base}
+\chapter{Sale e preparazioni di base}
 \input{./Ricette/Salse/my-magic-dust}
 \input{./Ricette/Salse/salsa-bbq}
 
 
 \newpage
-\part{Primi}
+\chapter{Primi}
 \input{./Ricette/Primi/risotto-alla-gallinella}
 
 \newpage
-\part{Secondi di pesce}
+\chapter{Secondi di pesce}
 \input{./Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio}
 \input{./Ricette/Secondi-di-pesce/tataki-di-tonno-agli-agrumi}
 
 \newpage
-\part{Secondi di carne}
+\chapter{Secondi di carne}
 \input{./Ricette/Secondi-di-carne/nuggets-di-pollo}
 \input{./Ricette/Secondi-di-carne/polpettone}
 
 \newpage
-\part{BBQ}
+\chapter{BBQ}
 \input{./Ricette/BBQ/bombette-pugliesi.tex}
 \input{./Ricette/BBQ/eliche-di-pollo-al-curry.tex}
 \input{./Ricette/BBQ/involtini-alla-siciliana.tex}
 \input{./Ricette/BBQ/smoked-chicken-wings.tex}
 
 \newpage
-\part{Cottura a bassa temperatura (CBT)}
+\chapter{Cottura a bassa temperatura (CBT)}
 \input{./Ricette/CBT/stinco-di-maiale-cbt.tex}
 \input{./Ricette/CBT/vitello-tonnato-cbt.tex}
 %
 \newpage
-\part{Dolci}
+\chapter{Dolci}
 \input{./Ricette/Dolci/barrette-energetiche}
 \input{./Ricette/Dolci/pancake}
 \input{./Ricette/Dolci/biscotti-di-natale}
