RIcetta della cioccolata in tazza

--- a/main.tex
+++ b/main.tex
@@ -237,6 +237,7 @@
 \chapter{Dolci}
 \input{./Ricette/Dolci/barrette-energetiche}
 \input{./Ricette/Dolci/bigne}
+\input{./Ricette/Dolci/cioccolata-in-tazza}
 \input{./Ricette/Dolci/crema-pasticcera}
 \input{./Ricette/Dolci/pancake}
 \input{./Ricette/Dolci/biscotti-di-natale}
