--- a/template.tex
+++ b/template.tex
@@ -2,19 +2,37 @@
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{30 minuti}
-\vegetarian
-\freeze
+%\vegetarian
+%\freeze
 \begin{ingreds}
 
-\columnbreak
-\ingredients[For the Crumble Mixture:]
+%\columnbreak
+%\ingredients[For the Crumble Mixture:]
 
 \end{ingreds}
 
 \begin{method}
 
-\end {method}
 
-\showit[1.25in]{example-image-b}{This is a picture}
+
+%\begin{table}[h]
+%\begin{tabular}{lcc}
+%\toprule
+%	Ingredienti	&	Peso(g)	&	Peso(g)\\
+%\midrule
+%	Paprika		&	40	&	60	\\
+%	Sale		&	33	&	50	\\
+%	Zucchero	&	20	&	30	\\
+%	Cumino		&	2	&	3	\\
+%	Pepe		&	6	&	9	\\
+%	Aglio		&	12	&	18	\\
+%	Origano		&	2	&	3	\\
+%\bottomrule
+%\end{tabular}
+%\end{table}
+
+\end{method}
+
+%\showit[1.25in]{example-image-b}{This is a picture}
 
 
