Aggiunte ricette di pizza e cassatine

--- a/main.tex
+++ b/main.tex
@@ -194,9 +194,9 @@
 
 \newpage
 \chapter{Pane e lievitati}
-\input{./Ricette/Pane-e-lievitati/crackers-al-sesamo.tex}
-\input{./Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex}
-
+\input{./Ricette/Pane-e-lievitati/crackers-al-sesamo}
+\input{./Ricette/Pane-e-lievitati/panini-hamburger-veloci}
+\input{./Ricette/Pane-e-lievitati/pizza-in-teglia}
 \newpage
 \chapter{Antipasti}
 \input{./Ricette/Antipasti/mini-hamburger-di-ricciola}
@@ -239,6 +239,7 @@
 \chapter{Dolci}
 \input{./Ricette/Dolci/barrette-energetiche}
 \input{./Ricette/Dolci/bigne}
+\input{./Ricette/Dolci/cassatine-siciliane}
 \input{./Ricette/Dolci/cioccolata-in-tazza}
 \input{./Ricette/Dolci/crema-pasticcera}
 \input{./Ricette/Dolci/crostata-di-limone}
