Aggiunta ricetta. beef ribs

--- a/main.tex
+++ b/main.tex
@@ -232,6 +232,7 @@
 
 \newpage
 \chapter{Cottura a bassa temperatura (CBT)}
+\input{./Ricette/CBT/beef-ribs.tex}
 \input{./Ricette/CBT/stinco-di-maiale-cbt.tex}
 \input{./Ricette/CBT/vitello-tonnato-cbt.tex}
 %
