--- a/main.tex
+++ b/main.tex
@@ -189,8 +189,12 @@
 \tableofcontents
 
 \mainmatter
-%\part{Introduzione}
+%\chapter*{Introduzione}
 %\input{metodi/introduzione.tex}
+%In questo testo sono raccolte le mie ricette e quelle della mia famiglia. Alcune ricette sono state elaborate da me, altre, raccolte sulla rete, su libri o riferite da amici, sono state adattate al mio gusto personale, alle mie esigenze, e alle attrezzature di cui dispongo. Tutte queste ricette sono state testate e se sono state inserite qui perché mi sono piaciute e ho ritenuto valesse la pena ricordale. Questo infatti il il mio libro di ricette che uso come se fosse il mio quaderno di appunti di cucina.
+
+%Se trovi una ricetta su questo testo che ti interessa, sei libero di provarla e di copiarla.
+
 
 \newpage
 \chapter{Pane e lievitati}
