Corretti refusi e aggiunte note personali

--- a/Ricette/BBQ/smoked-chicken-wings.tex
+++ b/Ricette/BBQ/smoked-chicken-wings.tex
@@ -1,25 +1,25 @@
-\recipe[]{Chicken wings}
+\recipe[Ho preso questa ricetta da bbq4all elaborandola sulla base del mio gusto personale. Preparo le alette di pollo cucinate in questo modo da molti anni e posso dire che regalano sempre grandi soddisfazioni. Il numero di alette è limitato alla dimensione del mio BBQ e sono sufficienti per 4 persone, tuttavia sono sicuro che se ne potessi preparare di più, certamente non avanzerebbero.]{Chicken wings}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{40 minuti}
 \begin{ingreds}
 	12 ali di pollo
-	salsa bbq
+	Salsa BBQ (Vedi ricetta \ref{salsa-bbq})
+
 \columnbreak
 \ingredients[Per la marinatura:]
 	175g di burro
-	1 cucchiaio di paprika
-	succo di un limone
+	1 cucchiaio abbondante di paprika
+	mezzo bicchiere di aceto di mele
 	1 cucchiaino di senape
 	1 cucchiaino di sale
-	1 cucchiaio di zucchero
-	1 bicchiere di burbon
+	1 cucchiaio di zucchero semolato
+	1 bicchiere di brandy
 	1 cucchiaino di concentrato di pomodoro
-	Salsa BBQ (Vedi ricetta \ref{salsa-bbq})
 \end{ingreds}
 
 \begin{method}
-Togli la punta delle ali di pollo e dividile a metà. In un tegamino sciogli il burro, aggiungi il limone, e gli altri ingredienti per la marinatura. Attendi che l'acool contenuto nel burbon sia evaporato completamente, poi fai raffreddare.
+Togli la punta delle ali di pollo e dividile a metà. In un tegamino sciogli il burro, aggiungi l'aceto, e gli altri ingredienti per la marinatura. Attendi che l'acool contenuto nel brandy sia evaporato completamente, poi fai raffreddare.
 
 Metti a marinare il pollo per alcune ore in frigorifero con la marinatura appena preparata.
 
