--- a/Ricette/Dolci/barrette-energetiche.tex
+++ b/Ricette/Dolci/barrette-energetiche.tex
@@ -1,4 +1,4 @@
-\recipe[]{Barrette energetiche}
+\recipe[Utilizzo queste barrette energetiche per la mia attività sportiva. Visto il costo delle barrette commerciali, prepararsele in casa porta ad un notevole risparmio economico.]{Barrette energetiche}
 \serves{16 barrette}
 \preptime{1 ora}
 \cooktime{40 minuti}
@@ -7,7 +7,7 @@
 \begin{ingreds}
 	500g avena
 	3 banane
-	125g frutta secca (albiccoche, uvetta o altro)
+	125g frutta secca (albicocche, uvetta o altro)
 	250g miele
 	160 burro di arachidi
 	un cucchiaino di cacao amaro
