--- a/Ricette/Dolci/biscotti-di-natale.tex
+++ b/Ricette/Dolci/biscotti-di-natale.tex
@@ -1,4 +1,4 @@
-\recipe[Questa è una ricetta di famiglia che realizziamo una volta all'anno nel periodo delle feste Natalizie.]{Biscotti di Natale}
+\recipe[Questa è una ricetta di famiglia che realizziamo una volta all'anno nel periodo delle feste Natalizie. Prima delle festività ne prepariamo svariati chili da regalare ad amici e parenti. Si conservano per almeno un mese in ambiente fresco e asciutto.]{Biscotti di Natale}
 \serves{4}
 \preptime{2 ora}
 \cooktime{25 minuti}
