--- a/Ricette/Dolci/crostata-di-limone.tex
+++ b/Ricette/Dolci/crostata-di-limone.tex
@@ -1,4 +1,4 @@
-\recipe[]{Crostata di limone e mandorle}
+\recipe[Questa è la mia torta preferita che prepara molto spesso mia mamma. Non ho idea da dove arrivi questa ricetta deliziosa.]{Crostata di limone e mandorle}
 \serves{8}
 \preptime{1 ora}
 \cooktime[Cottura]{40 minuti}
