Aggiunto titolo e introduzione

--- a/main.tex
+++ b/main.tex
@@ -185,15 +185,21 @@
 
 
 \begin{document}
+\title{Appunti di cucina}
+
+\maketitle
 \frontmatter
 \tableofcontents
 
 \mainmatter
-%\chapter*{Introduzione}
+\chapter*{Introduzione}
 %\input{metodi/introduzione.tex}
-%In questo testo sono raccolte le mie ricette e quelle della mia famiglia. Alcune ricette sono state elaborate da me, altre, raccolte sulla rete, su libri o riferite da amici, sono state adattate al mio gusto personale, alle mie esigenze, e alle attrezzature di cui dispongo. Tutte queste ricette sono state testate e se sono state inserite qui perché mi sono piaciute e ho ritenuto valesse la pena ricordale. Questo infatti il il mio libro di ricette che uso come se fosse il mio quaderno di appunti di cucina.
+In questo testo sono raccolte le mie ricette preferite e quelle della mia famiglia. Alcune ricette sono state elaborate da me, altre, trovate sulla rete, su libri o riferite da amici, sono state adattate al mio gusto personale, alle mie esigenze, e alle attrezzature di cui dispongo.
 
-%Se trovi una ricetta su questo testo che ti interessa, sei libero di provarla e di copiarla.
+Se le ricette sono state prese da fonti diverse nelle prime righe del testo viene indicata la fonte alla quale si rimanda.
+
+Tutte queste ricette sono state provate e sono state inserite qui perché mi sono piaciute e ho ritenuto valesse la pena ricordarmele. Questo infatti non è un libro di ricette ma è il mio quaderno di appunti di cucina.
+
 
 
 \newpage
